8273115: CountedLoopEndNode::stride_con crash in debug build with -XX:+TraceLoopOpts

Reviewed-by: kvn, thartmann